feat: Add favicon

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
+
+    <!-- add favicon -->
+    <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
     <title>Discover the Code</title>
 </head>
 
@@ -76,7 +79,7 @@
         <p>Do you want to play again?</p>
         <div class="game-over-buttons">
             <button type="button" id="play-again-button" class="button" data-type="play-again">Play again</button>
-            <button type="button" id="exit-button" class="button" data-type="exit">Close</button>
+            <button type="button" id="close-button" class="button" data-type="close">Close</button>
         </div>
     </div>
 
@@ -89,7 +92,7 @@
         <p>Do you want to play again?</p>
         <div class="game-over-buttons">
             <button type="button" class="button" data-type="play-again-2">Play again</button>
-            <button type="button" class="button" data-type="exit-2">Close</button>
+            <button type="button" class="button" data-type="close-2">Close</button>
         </div>
     </div>
 
@@ -103,194 +106,194 @@
         <!--the playground structure was insired by https://github.com/LudovicLeGuen/Mastermind-->
         <div class="row">
             <div class="square-row">
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
             </div>
             <div class="circle-row">
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
             </div>
         </div>
         <div class="row">
             <div class="square-row">
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
             </div>
             <div class="circle-row">
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
             </div>
         </div>
         <div class="row">
             <div class="square-row">
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
             </div>
             <div class="circle-row">
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
             </div>
         </div>
         <div class="row">
             <div class="square-row">
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
             </div>
             <div class="circle-row">
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
             </div>
         </div>
         <div class="row">
             <div class="square-row">
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
             </div>
             <div class="circle-row">
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
             </div>
         </div>
         <div class="row">
             <div class="square-row">
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
             </div>
             <div class="circle-row">
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
             </div>
         </div>
         <div class="row">
             <div class="square-row">
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
             </div>
             <div class="circle-row">
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
             </div>
         </div>
         <div class="row">
             <div class="square-row">
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
             </div>
             <div class="circle-row">
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
             </div>
         </div>
         <div class="row">
             <div class="square-row">
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
             </div>
             <div class="circle-row">
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
             </div>
         </div>
         <div class="row">
             <div class="square-row">
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
             </div>
             <div class="circle-row">
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
             </div>
         </div>
         <div class="row">
             <div class="square-row">
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
             </div>
             <div class="circle-row">
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
             </div>
         </div>
         <div class="row">
             <div class="square-row">
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
-                <div class="square square-init"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
+                <div class="square playground-square"></div>
             </div>
             <div class="circle-row">
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
-                <div class="circle circle-init"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
+                <div class="circle playground-circle"></div>
             </div>
         </div>
     </div>
