feat: Add play/pause music funct. to music icon

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                 <div class="secret-code-square"><i class="fa-solid fa-key no-key"></i></div>
             </div>
             <div id="ctn-music-and-rules">
+                <audio id="focus-music">
+                    <source src="assets/music/focus-music.mp3">
+                </audio>
                 <div id="music">
                     <span id="music-note"><i class="fa-solid fa-music"></i></span>
                 </div>
