--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
     <!-- add favicon -->
-    <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <title>Discover the Code</title>
 </head>
 
@@ -77,8 +77,8 @@
         </audio>
         <img src="assets/images/congratulations-icon-31113.gif" alt="A colorful congratulations icon"
             id="congrats-image">
-        <p>Hurray! You guessed the secret color code! It took you <span id="time-used">0</span> and you needed <span
-                id="moves-total">0</span> attempts to guess the code.</p>
+        <p>Hurray! You guessed the secret color code! It took you <span id="final-time">0</span> and you needed <span
+                id="moves-total"></span><span id="attempts"></span> to guess the code.</p>
         <p>Do you want to play again?</p>
         <div class="game-over-buttons">
             <button type="button" id="play-again-button" class="button" data-type="play-again">Play again</button>
