feat: Make the rules more clear by using images

--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
             class="close"> -->
         <h2>Welcome to Discover the Secret Code Game</h2>
         <p>There is a secret color code you have to break. You have 12 attempts.</p>
-        <h2>Rules</h2>
-        <p>Click on one out of eight colors in the color picker below the play board. Choose five colors. Colors can
-            be
-            repeated. Once you are happy with the choice of all five colors,
-            press the Check button. Your clues will be shown on the right.
+        <!-- <h2>Rules</h2> -->
+        <img src="assets/images/pick_color.png" alt="A user can choose from 8 colors">
+        <p>Choose five colors from the color picker by clicking on them. Colors may be used repeatedly. When five colors
+            are chosen, click the Check button.
         </p>
         <h2>Clues</h2>
+        <img src="assets/images/scoring_rules.png" alt="A graphical explanation of the black, white and grey clues">
         <ul>
-            <li>White circle - you guessed a color, but not its position</li>
             <li>Black circle - you guessed a color, and its position</li>
+            <li>White circle - you guessed a color, but not its position</li>
             <li>Grey circle - wrong color was chosen</li>
         </ul>
         <p>
