feat: Add stop music icon and apply js

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
                 <div id="music">
                     <span id="music-note"><i class="fa-solid fa-music"></i></span>
                 </div>
+                <img src="assets/images/music-playing.png" id="music-stop"
+                    alt="This icon implies that the music is playing">
                 <div id="question-mark"><i class="fa-solid fa-question"></i></div>
             </div>
         </div>
