--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <li>Grey circle - wrong color was chosen</li>
         </ul>
         <p>
-            The position of the black, white and grey circles does not correspond to a particular color choice.
+            The position of black, white and grey circles is random and does not correspond to user's color choices.
             If you guess the color code in less than 12 attempts, you win. If not, too bad, but you can try again.
             Enjoy!
         </p>
