Content: Update content of the welcome pop up

--- a/index.html
+++ b/index.html
@@ -49,22 +49,25 @@
     <div id="welcome-pop-up" class="pop-up">
         <!-- <img src="assets/images/close-icon-13612.png" alt="A closing icon in the shape on an X" id="close"
             class="close"> -->
-        <h2>Welcome to Discover the Secret Code Game</h2>
-        <p>There is a secret color code you have to break. You have 12 attempts.</p>
+        <h2>Welcome to Discover the Secret Code Puzzle</h2>
+        <p>There is a secret color code you have to break.</p>
         <!-- <h2>Rules</h2> -->
         <img src="assets/images/pick_color.png" alt="A user can choose from 8 colors">
-        <p>Choose five colors from the color picker by clicking on them. Colors may be used repeatedly. When five colors
-            are chosen, click the Check button.
+        <p>Choose five colors from the color picker by clicking on them. Colors may be used repeatedly. You can
+            <strong>delete</strong> a
+            chosen color, by clicking on it. When five colors
+            are chosen, click the <strong>Check</strong> button.
         </p>
         <h2>Clues</h2>
         <img src="assets/images/scoring_rules.png" alt="A graphical explanation of the black, white and grey clues">
         <ul>
-            <li>Black circle - you guessed a color, and its position</li>
-            <li>White circle - you guessed a color, but not its position</li>
-            <li>Grey circle - wrong color was chosen</li>
+            <li><strong>Black</strong> circle - you guessed a color, and its position</li>
+            <li><strong>White</strong> circle - you guessed a color, but not its position</li>
+            <li><strong>Grey</strong> circle - wrong color was chosen</li>
         </ul>
         <p>
-            The position of black, white and grey circles is random and does not correspond to user's color choices.
+            The position of black, white and grey circles is <strong>random</strong> and does not correspond to user's
+            color choices.<br>
             If you guess the color code in less than 12 attempts, you win. If not, too bad, but you can try again.
             Enjoy!
         </p>
