Update the rules to make them more clear

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             class="close"> -->
         <h2>Welcome to Discover the Secret Code Puzzle</h2>
         <p>There is a secret color code you have to break.</p>
-        <!-- <h2>Rules</h2> -->
+        <h2>Pick Your Color</h2>
         <img src="assets/images/pick_color.png" alt="A user can choose from 8 colors">
         <p>Choose five colors from the color picker by clicking on them. Colors may be used repeatedly. You can
             <strong>delete</strong> a
@@ -59,7 +59,7 @@
             are chosen, click the <strong>Check</strong> button.
         </p>
         <h2>Clues</h2>
-        <img src="assets/images/scoring_rules.png" alt="A graphical explanation of the black, white and grey clues">
+        <img src="assets/images/clues.png" alt="A graphical explanation of the black, white and grey clues">
         <ul>
             <li><strong>Black</strong> circle - you guessed a color, and its position</li>
             <li><strong>White</strong> circle - you guessed a color, but not its position</li>
@@ -67,7 +67,8 @@
         </ul>
         <p>
             The position of black, white and grey circles is <strong>random</strong> and does not correspond to user's
-            color choices.<br>
+            color choices. You can see from the clues that it is not the orange color which is in the right
+            position in the first three rows. The purple color is.<br>
             If you guess the color code in less than 12 attempts, you win. If not, too bad, but you can try again.
             Enjoy!
         </p>
