--- a/index.html
+++ b/index.html
@@ -67,8 +67,11 @@
         </ul>
         <p>
             The position of black, white and grey circles is <strong>random</strong> and does not correspond to user's
-            color choices. You can see from the clues that it is not the orange color which is in the right
-            position in the first three rows. The purple color is.<br>
+            color choices. You can see from the clues that it is not the <strong>orange</strong> color which is in the
+            right
+            position despite being first in the row. The <strong>purple</strong> color received the
+            <strong>black</strong> clue.<br>
+            <br>
             If you guess the color code in less than 12 attempts, you win. If not, too bad, but you can try again.
             Enjoy!
         </p>
