Change size of Clues in welcome pop up

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             are chosen, click the <strong>Check</strong> button.
         </p>
         <h2>Clues</h2>
-        <img src="assets/images/clues.png" alt="A graphical explanation of the black, white and grey clues">
+        <img id="clues" src="assets/images/clues.png" alt="A graphical explanation of the black, white and grey clues">
         <ul>
             <li><strong>Black</strong> circle - you guessed a color, and its position</li>
             <li><strong>White</strong> circle - you guessed a color, but not its position</li>
