style: Improve picture quality

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <h2>Welcome to Discover the Secret Code Puzzle</h2>
         <p>There is a secret color code you have to break.</p>
         <h2>Pick Your Color</h2>
-        <img src="assets/images/pick_color.png" alt="A user can choose from 8 colors">
+        <img id="colors" src="assets/images/pick-color.png" alt="A user can choose from 8 bright colors">
         <p>Choose five colors from the color picker by clicking on them. Colors may be used repeatedly. You can
             <strong>delete</strong> a
             chosen color, by clicking on it. When five colors
