--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Play a logical puzzle based on a well-known game called Mastermind">
 
     <!-- font awesome icons -->
     <script src="https://kit.fontawesome.com/a4029127b8.js" crossorigin="anonymous"></script>
